Bug 152199 - Image garbled after roundtrip
Summary: Image garbled after roundtrip
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.8.1 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: filter:docx
Depends on:
Blocks:
 
Reported: 2022-11-24 10:20 UTC by Jan Holesovsky
Modified: 2023-07-11 14:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
A document created from a MSO template. (140.08 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-11-24 10:22 UTC, Jan Holesovsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Holesovsky 2022-11-24 10:20:47 UTC
Description:
After roundtrip, the image in the attached document is garbled.

Steps to Reproduce:
1. Open the attached DOCX
2. Save it to DOCX
3. pen it again

Actual Results:
The image is garbled.

Expected Results:
The image looks like the initial one.


Reproducible: Always


User Profile Reset: No

Additional Info:
Will attach the document.
Comment 1 Jan Holesovsky 2022-11-24 10:22:18 UTC
Created attachment 183752 [details]
A document created from a MSO template.
Comment 2 raal 2022-11-24 18:05:40 UTC
Confirm with Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7b23c53232245a1f61c3e8ddff59d049a49fe975
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2022-11-24 20:59:40 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ab080ab1ab3100d9702a745287566b78b8d59e54

tdf#152199: Don't crop twice

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Jan Holesovsky 2022-11-24 21:18:18 UTC
Should be fixed now :-)
Comment 5 Stéphane Guillou (stragu) 2022-11-25 07:55:28 UTC
Was already a problem in:

Version: 7.1.8.1 / LibreOffice Community
Build ID: e1f30c802c3269a1d052614453f260e49458c82c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded

Fixed verified in build from today:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 24d7431876e87eba700a9f141dc8e030143a92ad
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Jan!
Comment 6 Commit Notification 2022-11-25 09:48:57 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/96accaabebc2685a55323f939c432ce8e8c60f34

tdf#152199: Don't crop twice

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.